--- a/Protfolio_0011/templete/CRUD/showUser.html
+++ b/Protfolio_0011/templete/CRUD/showUser.html
@@ -5,9 +5,9 @@
 
 {% block content %}
   <main class="container bg-body-tertiary mt-2">
-    <h1 class="text-center">all users</h1>
+    <h1 class="text-center">Welcome to Dashboard</h1>
     <section>
-        
+        {{form}}
     </section>
   </main>
 {% endblock content %}
