--- a/Protfolio_0011/templete/common/index.html
+++ b/Protfolio_0011/templete/common/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link fw-medium me-4" href="">Join now</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fw-medium me-4" href="">Login</a>
+                        <a class="nav-link fw-medium me-4" href="{% url 'loginUser' %}">Login</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link fw-medium me-4" href="">News</a>
