--- a/Protfolio_0011/templete/CRUD/showUserDashboard.html
+++ b/Protfolio_0011/templete/CRUD/showUserDashboard.html
@@ -13,5 +13,10 @@
           {% endfor %}
         
     </section>
+    <section class="d-flex">
+      <a href="">Update Information</a>
+      <h1> ||||||||||| </h1>
+      <a href="{% url 'loginUser' %}"> Log Out </a>
+    </section>
   </main>
 {% endblock content %}
