--- a/Protfolio_0011/templete/CRUD/showUserDashboard.html
+++ b/Protfolio_0011/templete/CRUD/showUserDashboard.html
@@ -14,7 +14,7 @@
         
     </section>
     <section class="d-flex">
-      <a href="">Update Information</a>
+      <a href="{% url 'updateUser' %}">Update Information</a>
       <h1> ||||||||||| </h1>
       <a href="{% url 'loginUser' %}"> Log Out </a>
     </section>
