--- a/Protfolio_0011/templete/CRUD/updateUser.html
+++ b/Protfolio_0011/templete/CRUD/updateUser.html
@@ -5,16 +5,26 @@
 
 {% block content %}
   <main class="container bg-body-tertiary mt-2">
-    <h1 class="text-center">Welcome to Dashboard</h1>
+    <h1 class="text-center">Updates Your data</h1>
     <section>
+        <form action="" method="POST" novalidate>
+            {% csrf_token %}      
+
+
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <p>{{error}}</p>
+                {% endfor %}
+            {% endif %}
 
           {% for frm in form %}
-            <p>{{frm.label_tag}} {{frm.value}}</p>
+          <p>{{frm.label_tag}} {{frm}}</p>
           {% endfor %}
-        
+            <button class="btn btn-primary" type="submit">Save</button>
+        </form>
     </section>
     <section class="d-flex">
-      <a href="">Update Information</a>
+        <a href="{% url 'userDashboard' %}"> Back Dashboard </a>
       <h1> ||||||||||| </h1>
       <a href="{% url 'loginUser' %}"> Log Out </a>
     </section>
