Update and PasswordChangeForm

--- a/Protfolio_0011/templete/common/index.html
+++ b/Protfolio_0011/templete/common/index.html
@@ -27,16 +27,13 @@
                         <a class="nav-link fw-medium mx-4" href="{% url 'createUser' %}">Create User</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fw-medium me-4" href="">Join now</a>
-                      </li>
-                      <li class="nav-item">
                         <a class="nav-link fw-medium me-4" href="{% url 'loginUser' %}">Login</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link fw-medium me-4" href="">News</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link fw-medium me-4" href="">Show join</a>
+                        <a class="nav-link fw-medium me-4" href="{% url 'passchange' %}">Change Password</a>
                       </li>
                       
                     </ul>
